# Advent-of-Code-2024

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  filing.cpp  main.cpp  utils.cpp
1/: 1.cpp  1.py
10/: 10.py
11/: 11.py
12/: 12.py
13/: 13.py
14/: 14.py
15/: 15.py
16/: 16.py
17/: 17.py
2/: 2.cpp  2.py
3/: 3.cpp  3.py
4/: 4.cpp  4.py
5/: 5.cpp  5.py
6/: 6.cpp  6.py
7/: 7.cpp  7.py
8/: 8.py
9/: 9.py
include/: 1.h  2.h  3.h  4.h  5.h  6.h  7.h  filing.h  utils.h
utils/: operate_on_lines.py
